--- a/Mango_API/appsettings.json
+++ b/Mango_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultDbConnection": "Server = DESKTOP-FHUHSBP\\SQLEXPRESS;Database = Mango_API;TrustServerCertificate = True;Trusted_Connection = True;"
+  }
 }
